--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -32,3 +32,5 @@ Delete from table will delete an item from the table vs. drop the table will del
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+So much to build when making our own data base.
