--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -14,6 +14,8 @@ Enums are strongly typed constants.  Enums are used for more maintainable code b
 
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
 
+I have not used an enum in C# yet.
+
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
