--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -12,6 +12,8 @@ Enums are strongly typed constants.  Enums are used for more maintainable code b
 
 2. How can you modify an Enum?
 
+Enum values can't be changed because they become constants at compile time. 
+
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
 
 I have not used an enum in C# yet.
