--- a/reflections/week10/05.md
+++ b/reflections/week10/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I think I will like C#, but don't have a good grasp on it yet.
+
 - What did you learn that was a shock or surprise?
+
+How much structure there is in C#.
+
 - What are you struggling with?
+
+I still have a hard time planning out what I need to do when starting a large project.
+
 - What would you count as a victory?
+
+Still here.
