--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -8,7 +8,11 @@
 
 1. What is the difference between a `PRIMARY KEY` and a `FOREIGN KEY`
 
+Primary Keys are unique pieces of information that can be used to identify records on a table.  A Primary Key can then be used as a Foreign Key to reference data on another table.  
+
 2. What is an ***alias***?
+
+An Alias is used after the first instance of the written table name and can be used to shorten the name in place of the full table name.
 
 3. Demonstrate how you would query a join statement that would get all of a doctors patients from the following collections:
 
@@ -37,6 +41,7 @@ CREATE TABLE doctors (
 )
 
 ```
+Select patients.* WHERE patients.id = doctors.patientId
 
 ## Afternoon Assignment Link
 
