--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -8,9 +8,15 @@
 
 1. What does ***inheritance*** accomplish for us in C#?
 
+Inheritance is a way to describe a relationship between 2 classes.
+
 2. How does ***member inheritance*** work in C#? Does a `Class` inherit all members of the base `Class`?
 
+Not all members of a class are inherited, Constructors and finalizers are not inherited from the parent class.
+
 3. How does ***accessibility*** affect inheritance?
+
+Members can be set as private, but can still accessed if the the child classes are nested in the parent class.
 
 ## Afternoon Assignment Link
 
