--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -41,7 +41,7 @@ CREATE TABLE doctors (
 )
 
 ```
-Select patients.* WHERE patients.id = doctors.patientId
+From doctors JOIN patients ON patients.id = doctors.patientId
 
 ## Afternoon Assignment Link
 
