--- a/reflections/week11/03.md
+++ b/reflections/week11/03.md
@@ -8,9 +8,15 @@
 
 1. What is SQL injection?
 
+This is a type of attack that is done by inserting arbitrary SQL code into a database query.
+
 2. What are 3 methods SQL injection can be done by?
 
+User input, modified cookies used to inject SQL into the back end database, and sever variables such as HTTP headers can used.
+
 3. How can we detect and sanitize SQL injection attacks?
+
+Use prepared statements with parameterized queries for inputs.Limit account privileges of the database user.Create stored procedures to execute queries. 
 
 ## Afternoon Assignment Link
 
