--- a/reflections/week11/05.md
+++ b/reflections/week11/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I was able to complete the back end for AllSpice.
+
 - What did you learn that was a shock or surprise?
+
+Being able to name methods the same thing.
+
 - What are you struggling with?
+
+I'm a bit behind on career service assignments.
+
 - What would you count as a victory?
+
+Getting through this course, at least to the final.
