--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -6,6 +6,8 @@
 
 Review and reflect on your experiences in this course, as this is the last lecture before your **final project**. What are your concerns? How do you plan to manage your time? What have you enjoyed most about the course up to this point?
 
+I am a bit concerned about maintaining all this knowledge but that will be on me to continue coding. I plan to keep busy Mon-Fri, splitting the day between job hunting and coding until I find a job.  I think I enjoyed the course overall, happy to be able to learn new skills in a short amount of time.
+
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
