--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -23,3 +23,5 @@ Members can be set as private, but can still accessed if the the child classes a
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+I was happy to pass all the postman tests for AllSpice.
